Create endpoints for lesions, photos and reminders (#21)
* Fix api schemas

* Create db schema

* Create lesion and photo endpoints

* Add prettier

* Add missing dependency

* Integrate sequelize

* Implement reminder related API's and lint

Implement the first version of CRUD for managing reminders, also run
lint and fix some bugs in `api.yml` related to reminder endpoints

---------
